--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,43 @@
 
 @import url(./../vendor/normalize.css);
 @import url(./../vendor/fonts.css);
+
+/* Global */
+
+@import url(./../blocks/variables/variables.css);
+
+/* Blocks */
+
+@import url(./../blocks/page/page.css);
+@import url(./../blocks/page/__wrapper/page__wrapper.css);
+@import url(./../blocks/page/__content/page__content.css);
+
+@import url(./../blocks/wrapper/wrapper.css);
+
+@import url(./../blocks/header/header.css);
+@import url(./../blocks/header/__logo/header__logo.css);
+
+@import url(./../blocks/content/content.css);
+
+@import url(./../blocks/profile/profile.css);
+@import url(./../blocks/profile/__figure/profile__figure.css);
+@import url(./../blocks/profile/__avatar/profile__avatar.css);
+@import url(./../blocks/profile/__avatar-image/profile__avatar-image.css);
+@import url(./../blocks/profile/__info/profile__info.css);
+@import url(./../blocks/profile/__username/profile__username.css);
+@import url(./../blocks/profile/__desc/profile__desc.css);
+@import url(./../blocks/profile/__edit/profile__edit.css);
+@import url(./../blocks/profile/__add-btn/profile__add-btn.css);
+
+@import url(./../blocks/elements/elements.css);
+@import url(./../blocks/elements/__list/elements__list.css);
+@import url(./../blocks/elements/__item/elements__item.css);
+
+@import url(./../blocks/element/element.css);
+@import url(./../blocks/element/__image/element__image.css);
+@import url(./../blocks/element/__title/element__title.css);
+@import url(./../blocks/element/__like/element__like.css);
+@import url(./../blocks/element/__like-btn/element__like-btn.css);
+
+@import url(./../blocks/footer/footer.css);
+@import url(./../blocks/footer/__copyrigth/footer__copyrigth.css);
