--- a/pages/index.css
+++ b/pages/index.css
@@ -35,7 +35,9 @@
 @import url(./../blocks/elements/__item/elements__item.css);
 
 @import url(./../blocks/element/element.css);
+@import url(./../blocks/element/__image-wrapper/element__image-wrapper.css);
 @import url(./../blocks/element/__image/element__image.css);
+@import url(./../blocks/element/__caption/element__caption.css);
 @import url(./../blocks/element/__title/element__title.css);
 @import url(./../blocks/element/__like/element__like.css);
 @import url(./../blocks/element/__like-btn/element__like-btn.css);
