--- a/blocks/variables/variables.css
+++ b/blocks/variables/variables.css
@@ -4,3 +4,15 @@
   --main-text-mid-color: #545454;
   --main-padding-size: 19px;
 }
+
+@media screen and (min-width: 619px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+
+}
+
+@media screen and (min-width: 1280px) {
+
+}
