--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -1,3 +1,11 @@
 .elements__list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 282px);
+  row-gap: 20px;
+  column-gap: 17px;
 
+  padding: 0;
+  margin: 0;
+
+  list-style-type: none;
 }
