--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,12 @@
 .header__logo {
-  
+  width: 103px;
+  height: 24px;
+  object-fit: contain;
+}
+
+@media screen and (min-width: 619px) {
+  .header__logo {
+    width: 142px;
+    height: 33px;
+  }
 }
