--- a/blocks/page/__content/page__content.css
+++ b/blocks/page/__content/page__content.css
@@ -1,6 +1,5 @@
 .page__content {
-  /* margin-top: 48px;
-  margin-bottom: 64px; */
+  margin-top: 42px;
 }
 
 @media screen and (min-width: 768px) {
