--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -1,3 +1,39 @@
 .profile__add-btn {
-  
+  position: relative;
+  padding: 0;
+  margin: 0;
+  margin-top: 36px;
+
+  width: 100%;
+  height: 50px;
+
+  font-size: 0;
+  border-radius: 0;
+  border: 2px solid var(--main-text-color);
+  background-color: transparent;
+  background-size: 7.5px;
+  cursor: pointer;
+}
+
+.profile__add-btn::before,
+.profile__add-btn::after {
+  content: '';
+  display: block;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  background-color: var(--main-text-color);
+}
+
+.profile__add-btn::before {
+  width: 2px;
+  height: 16px;
+}
+
+.profile__add-btn::after {
+  width: 16px;
+  height: 2px;
 }
