--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,3 +1,10 @@
 .profile__avatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  overflow: hidden;
 }
