--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,3 +1,27 @@
 .profile__edit {
+  position: absolute;
+  top: 8px;
+  right: -28px;
 
+  width: 18px;
+  height: 18px;
+
+  font-size: 0;
+  border-radius: 0;
+  border: 1px solid var(--main-text-color);
+  background-color: transparent;
+  background-image: url(./../../../images/icon-edit-button.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 7.5px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 619px) {
+  .profile__edit {
+    width: 24px;
+    height: 24px;
+
+    background-size: 10px;
+  }
 }
