--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,3 +1,14 @@
 .profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
 
+@media screen and (min-width: 619px) {
+  .profile {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
