--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,4 +2,8 @@
   padding: 0;
   margin: 0;
   height: 361px;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: var(--main-text-color);
+  color: var(--main-bg-color);
 }
