--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -15,6 +15,12 @@
   background-position: center;
   background-size: 7.5px;
   cursor: pointer;
+  transition: opacity .2s ease;
+}
+
+.profile__edit:hover,
+.profile__edit:focus {
+  opacity: .6;
 }
 
 @media screen and (min-width: 619px) {
