--- a/pages/index.css
+++ b/pages/index.css
@@ -46,3 +46,13 @@
 
 @import url(./../blocks/footer/footer.css);
 @import url(./../blocks/footer/__copyrigth/footer__copyrigth.css);
+
+@import url(./../blocks/modal/modal.css);
+@import url(./../blocks/modal/_show/modal_show.css);
+@import url(./../blocks/modal/__content/modal__content.css);
+
+@import url(./../blocks/form/form.css);
+@import url(./../blocks/form/__wrapper/form__wrapper.css);
+@import url(./../blocks/form/__title/form__title.css);
+@import url(./../blocks/form/__text-input/form__text-input.css);
+@import url(./../blocks/form/__button/form__button.css);
