--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -2,7 +2,22 @@
   display: flex;
   flex-direction: column;
   gap: 36px;
+  box-sizing: border-box;
+  max-width: 320px;
 
   flex-grow: 1; /* for sticky footer */
 }
 
+@media screen and (min-width: 619px) {
+  .content {
+    gap: 50px;
+    max-width: 619px;
+  }
+}
+
+@media screen and (min-width: 920px) {
+  .content {
+    gap: 50px;
+    max-width: 920px;
+  }
+}
