--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -1,11 +1,24 @@
 .elements__list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 282px);
+  grid-template-columns: 282px;
   row-gap: 20px;
   column-gap: 17px;
+  justify-content: center;
 
   padding: 0;
   margin: 0;
 
   list-style-type: none;
+}
+
+@media screen and (min-width: 619px) {
+  .elements__list {
+    grid-template-columns: repeat(2, 282px);
+  }
+}
+
+@media screen and (min-width: 920px) {
+  .elements__list {
+    grid-template-columns: repeat(3, 282px);
+  }
 }
