--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -15,3 +15,12 @@
   outline: 0;
   background-color: rgba(0, 0, 0, .8);
 }
+
+@media screen and (min-width: 619px) {
+  .form__button {
+    margin-top: 48px;
+
+    font-size: 18px;
+    line-height: 50px;
+  }
+}
