--- a/blocks/form/__text-input/form__text-input.css
+++ b/blocks/form/__text-input/form__text-input.css
@@ -12,3 +12,9 @@
 .form__text-input:first-of-type {
   margin-top: 75px;
 }
+
+@media screen and (min-width: 619px) {
+  .form__text-input:first-of-type {
+    margin-top: 49px;
+  }
+}
