--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -3,3 +3,9 @@
   font-size: 18px;
   line-height: 1.2;
 }
+
+@media screen and (min-width: 619px) {
+  .form__title {
+    font-size: 24px;
+  }
+}
