--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,7 @@
 .header__logo {
   width: 103px;
   height: 24px;
+  margin-left: 9px;
   object-fit: contain;
 }
 
@@ -8,5 +9,6 @@
   .header__logo {
     width: 142px;
     height: 33px;
+   margin-left: 0;
   }
 }
