--- a/blocks/modal/__content/modal__content.css
+++ b/blocks/modal/__content/modal__content.css
@@ -1,5 +1,16 @@
 .modal__content {
+  position: relative;
+  box-sizing: border-box;
+  min-width: 282px;
   padding: 25px 22px;
+
   background-color: var(--main-text-color);
   border-radius: 10px;
+}
+
+@media screen and (min-width: 619px) {
+  .modal__content {
+    min-width: 430px;
+    padding: 34px 36px 37px;
+  }
 }
