--- a/blocks/page/__content/page__content.css
+++ b/blocks/page/__content/page__content.css
@@ -1,21 +1,10 @@
 .page__content {
+  margin: 0 auto;
   margin-top: 42px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 619px) {
   .page__content {
-    /* margin-bottom: 88px; */
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .page__content {
-    /* margin-bottom: 92px; */
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .page__content {
-    /* margin-top: 56px; */
+    margin-top: 40px;
   }
 }
