--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -2,13 +2,13 @@
   position: relative;
   padding: 0;
   margin: 0;
-  margin-top: 36px;
+  margin-top: 32px;
 
   width: 100%;
   height: 50px;
 
   font-size: 0;
-  border-radius: 0;
+  border-radius: 2px;
   border: 2px solid var(--main-text-color);
   background-color: transparent;
   background-size: 7.5px;
@@ -42,4 +42,21 @@
 .profile__add-btn:hover,
 .profile__add-btn:focus {
   opacity: .6;
+}
+
+@media screen and (min-width: 619px) {
+  .profile__add-btn {
+    width: 150px;
+    margin-top: 0;
+  }
+
+  .profile__add-btn::before {
+    width: 2px;
+    height: 22px;
+  }
+
+  .profile__add-btn::after {
+    width: 22px;
+    height: 2px;
+  }
 }
