--- a/blocks/profile/__figure/profile__figure.css
+++ b/blocks/profile/__figure/profile__figure.css
@@ -6,3 +6,11 @@
   margin: 0;
   padding: 0;
 }
+
+@media screen and (min-width: 619px) {
+  .profile__figure {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
