--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,6 +1,17 @@
 .profile__info {
-  position: relative;
-  text-align: center;
   margin-top: 26px;
   max-width: 226px;
+  position: relative;
+
+  text-align: center;
+}
+
+@media screen and (min-width: 619px) {
+  .profile__info {
+    max-width: 500px;
+    margin-top: 0;
+    margin-left: 30px;
+
+    text-align: left;
+  }
 }
