--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -8,10 +8,16 @@
 
 @media screen and (min-width: 619px) {
   .profile__info {
-    max-width: 500px;
     margin-top: 0;
     margin-left: 30px;
 
     text-align: left;
   }
 }
+@media screen and (min-width: 920px) {
+  .profile__info {
+    max-width: 500px;
+  }
+}
+
+
