--- a/blocks/footer/__copyrigth/footer__copyrigth.css
+++ b/blocks/footer/__copyrigth/footer__copyrigth.css
@@ -8,3 +8,9 @@
 .footer__copyright:focus {
   opacity: .9;
 }
+
+@media screen and (min-width: 619px) {
+  .footer__copyright {
+    font-size: 18px;
+  }
+}
