fix(index): hotfix after review 1

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,7 +1,9 @@
 .element {
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
-  height: 361px;
+
   border-radius: 10px;
   overflow: hidden;
   background-color: var(--main-text-color);
