--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
 
   padding-bottom: 32px;
 
-  border-bottom: 1px solid var(--main-text-mid-color);
+  border-bottom: 1px solid rgba(54, 54, 54, .7);
 }
 
 @media screen and (min-width: 619px) {
