--- a/blocks/modal/__content/modal__content.css
+++ b/blocks/modal/__content/modal__content.css
@@ -1,7 +1,7 @@
 .modal__content {
   position: relative;
   box-sizing: border-box;
-  min-width: 282px;
+  width: 282px;
   padding: 25px 22px;
 
   background-color: var(--main-text-color);
@@ -10,7 +10,7 @@
 
 @media screen and (min-width: 619px) {
   .modal__content {
-    min-width: 430px;
+    width: 430px;
     padding: 34px 36px 37px;
   }
 }
