--- a/blocks/modal/__title/modal__title.css
+++ b/blocks/modal/__title/modal__title.css
@@ -1,11 +1,13 @@
-.form__title {
+.modal__title {
+  margin: 0;
+
   font-weight: 900;
   font-size: 18px;
   line-height: 1.2;
 }
 
 @media screen and (min-width: 619px) {
-  .form__title {
+  .modal__title {
     font-size: 24px;
   }
 }
