--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -11,32 +11,12 @@
   border-radius: 2px;
   border: 2px solid var(--main-text-color);
   background-color: transparent;
-  background-size: 7.5px;
+  background-image: url(./../../../images/icon-add-button.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 16px 16px;
   cursor: pointer;
   transition: opacity .2s ease;
-}
-
-.profile__add-btn::before,
-.profile__add-btn::after {
-  content: '';
-  display: block;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  background-color: var(--main-text-color);
-}
-
-.profile__add-btn::before {
-  width: 2px;
-  height: 16px;
-}
-
-.profile__add-btn::after {
-  width: 16px;
-  height: 2px;
 }
 
 .profile__add-btn:hover,
@@ -48,15 +28,7 @@
   .profile__add-btn {
     width: 150px;
     margin-top: 0;
-  }
 
-  .profile__add-btn::before {
-    width: 2px;
-    height: 22px;
-  }
-
-  .profile__add-btn::after {
-    width: 22px;
-    height: 2px;
+    background-size: 22px 22px;
   }
 }
