--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,10 +1,10 @@
 .profile__avatar {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: block;
 
   width: 120px;
   height: 120px;
   border-radius: 50%;
   overflow: hidden;
+  object-position: center;
+  object-fit: none;
 }
