--- a/blocks/profile/__wrap/profile__wrap.css
+++ b/blocks/profile/__wrap/profile__wrap.css
@@ -1,16 +1,11 @@
-.profile__figure {
+.profile__wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  margin: 0;
-  padding: 0;
 }
 
 @media screen and (min-width: 619px) {
-  .profile__figure {
+  .profile__wrap {
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
   }
 }
