--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -1,9 +1,10 @@
 .form__button {
   margin-top: 45px;
+  padding: 0;
 
   line-height: 46px;
   border: 0;
-  border-radius: 0;
+  border-radius: 2px;
   background-color: rgba(0, 0, 0, 1);
   color: var(--main-text-color);
   cursor: pointer;
