--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,10 +1,5 @@
 .profile__edit {
   flex-shrink: 0;
-
-  position: absolute;
-  top: 8px;
-  right: -28px;
-
   width: 18px;
   height: 18px;
 
@@ -25,9 +20,16 @@
   opacity: .6;
 }
 
+@media screen and (max-width: 618px) {
+  .profile__edit {
+    position: absolute;
+    top: 8px;
+    right: -28px;
+  }
+}
+
 @media screen and (min-width: 619px) {
   .profile__edit {
-    position: static;
     margin-left: 10px;
   }
 }
