--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 36px;
+  flex-grow: 1; /* for sticky footer */
+
   box-sizing: border-box;
   max-width: 320px;
 }
