--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,7 @@
 .page {
+  display: flex;
+  min-height: 100vh; /* for sticky footer */
+
   font-family: 'Inter', 'Segoe UI', sans-serif;
   font-weight: 400;
   font-size: 14px;
