--- a/pages/index.css
+++ b/pages/index.css
@@ -58,4 +58,7 @@
 
 @import url(./../blocks/form/form.css);
 @import url(./../blocks/form/__text-input/form__text-input.css);
+@import url(./../blocks/form/__text-input/_type/form__text-input_type_error.css);
+@import url(./../blocks/form/__input-error/form__input-error.css);
 @import url(./../blocks/form/__button/form__button.css);
+@import url(./../blocks/form/__button/_disabled/form__button_disabled.css);
