--- a/variables/variables.css
+++ b/variables/variables.css
@@ -2,5 +2,6 @@
   --main-bg-color: #000;
   --main-text-color: #fff;
   --main-text-mid-color: #545454;
+  --main-error-color: #F00;
   --main-padding-size: 19px;
 }
