--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -4,7 +4,7 @@
   margin-top: 16px;
   padding: 0;
 
-  line-height: 46px;
+  min-height: 46px;
   border: 0;
   border-radius: 2px;
   background-color: rgba(0, 0, 0, 1);
@@ -23,6 +23,6 @@
     margin-top: 19px;
 
     font-size: 18px;
-    line-height: 50px;
+    min-height: 50px;
   }
 }
